--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,8 @@ jekyll serve: false
 host:        0.0.0.0
 port:        4000
 baseurl:     /
-url:         http://127.0.0.1
+#url:         http://127.0.0.1:4000
+url:         https://limpair.github.io/
 lsi:         false
 
 maruku:
