--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+title:       '依然繁华'
 source:      .
 destination: _site
 plugins_dir: _plugins
@@ -32,7 +33,7 @@ host:        0.0.0.0
 port:        4000
 baseurl:     /
 #url:         http://127.0.0.1:4000
-url:         https://limpair.github.io/
+url:         https://limpair.github.io
 lsi:         false
 
 maruku:
